playbooks/roles/11_setup_ingress/vars/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  namespace: apps
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"  # Cloudflare handles TLS
spec:
  rules:
  - host: waldhauser.sk
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: website-service  # ClusterIP service for website-app
            port: 
              number: 3000
  - host: www.waldhauser.sk
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: website-service
            port: 
              number: 3000
  - host: metrics.waldhauser.sk
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: metrics-service  # ClusterIP service for metrics-api
            port: 
              number: 5000
